--- a/packages/theme-patternfly-org/templates/mdx.css
+++ b/packages/theme-patternfly-org/templates/mdx.css
@@ -1,26 +1,11 @@
-#nav-content {
-  padding: var(--pf-global--spacer--xl) var(--pf-global--spacer--xl) 0 var(--pf-global--spacer--xl);
-}
-
 #ws-page-content-router {
   display: flex;
   flex-direction: column;
   height: 100%;
 }
 
-#ws-page-content-router > section.pf-c-page__main-section:first-child {
-  flex-grow: 1;
-}
-
-@media (max-width: 767px) {
-  #ws-page-content-router > section:first-child {
-    padding: 16px;
-  }
-}
-
-#main-content {
-  flex: 1;
-  padding: 0;
+#main-content,
+.ws-docs-title {
   background-color: var(--pf-global--BackgroundColor--light-200);
 }
 
@@ -54,10 +39,6 @@
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
-}
-
-#ws-page-title {
-  padding-bottom: var(--pf-global--spacer--lg);
 }
 
 .ws-code {
@@ -306,7 +287,6 @@
 
 .ws-mdx-content {
   flex-grow: 1;
-  padding: var(--pf-global--spacer--xl);
 }
 
 /* Design asked for this. A nice side effect is that the TOC doesn't "jump" between pages */
